# snippets

./: README.md
fsm/: CMakeLists.txt
fsm/implementation/: CMakeLists.txt  NumberCalculator.cc  NumberCalculatorState.cc  NumberCalculatorStateActive.cc  NumberCalculatorStateInactive.cc  main.cc
fsm/interface/: EventReporter.hh  NumberCalculator.hh  NumberCalculatorInterface.hh  NumberCalculatorState.hh  NumberCalculatorStateActive.hh  NumberCalculatorStateInactive.hh  StateMachineEventReporter.hh  StateMachineEventReporterInterface.hh  StateMachineInterface.h
